<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailedPage">

    <!--
     The Name row with a button at the end..the delete button
     -->
    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/NameLabel" />

    <TextView
        android:id="@+id/nameTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/nameTextView"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_toEndOf="@id/nameTextView"
        android:layout_toRightOf="@id/nameTextView"
        tools:text="HHELSJKEFL:KF" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_toEndOf="@id/nameTextBox"
        android:layout_toRightOf="@+id/nameTextBox"
        android:text="@string/DeleteButtonLabel" />

    <!--
     Price Section
     -->

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameTextView"
        android:layout_marginTop="15dp"
        android:text="@string/PriceLabel" />

    <TextView
        android:id="@+id/priceTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/priceTextView"
        android:layout_alignTop="@id/priceTextView"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_toEndOf="@+id/priceTextView"
        android:layout_toRightOf="@id/priceTextView"
        tools:text="2903" />

    <!--
     The Quantity section with an increase and decrease button
     -->
    <TextView
        android:id="@+id/QuantityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/priceTextView"
        android:layout_marginTop="15dp"
        android:text="@string/QuantityLabel" />

    <TextView
        android:id="@+id/QuantityTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/QuantityTextView"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_toEndOf="@id/QuantityTextView"
        android:layout_toRightOf="@id/QuantityTextView"
        tools:text="HHELLLO" />

    <Button
        android:id="@+id/increaseQuantityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/QuantityTextView"
        android:layout_marginRight="15dp"
        android:layout_toEndOf="@id/QuantityTextBox"
        android:layout_toRightOf="@id/QuantityTextBox"
        android:text="@string/PlusButtonLabel" />

    <Button
        android:id="@+id/decreaseQuantityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/QuantityTextView"
        android:layout_toEndOf="@id/increaseQuantityButton"
        android:layout_toRightOf="@id/increaseQuantityButton"
        android:text="@string/MinusButtonLabel" />

    <!--
     Supplier's Name
     -->

    <TextView
        android:id="@+id/supplierNameTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/increaseQuantityButton"
        android:layout_marginTop="15dp"
        android:text="@string/SupplierNameLabel" />

    <TextView
        android:id="@+id/supplierNameTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/supplierNameTextview"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_toEndOf="@+id/supplierNameTextview"
        android:layout_toRightOf="@+id/supplierNameTextview" />

    <!--
    Supplier Phone Number with the order button to send it to a contact app
     -->
    <TextView
        android:id="@+id/supplierNumberTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/supplierNameTextview"
        android:layout_marginTop="15dp"
        android:text="@string/SupplierPhoneNumberLabel" />

    <TextView
        android:id="@+id/supplierNumberTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/supplierNumberTextview"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_toEndOf="@+id/supplierNameTextview"
        android:layout_toRightOf="@id/supplierNumberTextview"
        tools:text="HELLLO" />

    <Button
        android:id="@+id/orderButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/supplierNumberTextview"
        android:layout_margin="25dp"
        android:text="@string/OrderButtonLabel" />

</RelativeLayout>