<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_margin="20dp"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.7">

        <TextView
            android:id="@+id/nameOfProduct"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/PriceLabel"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"/>
            <TextView
                android:id="@+id/priceListViewTextBox"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="23" />
            <TextView
                android:layout_marginLeft="15dp"
                android:text="@string/QuantityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/quantityListViewTextBox"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_weight="0.3">

        <Button
            android:id="@+id/saleButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:focusable="false"
            android:text="@string/SaleButtonLabel"
            />
        <Button
            android:id="@+id/editButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:focusable="false"
            android:text="@string/EditButtonLabel"/>

    </LinearLayout>

</LinearLayout>